--- a/TeamsTabAppClient/wwwroot/index.html
+++ b/TeamsTabAppClient/wwwroot/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="ms-Fabric">
-    <div id="app">Loading...</div>
+    <div id="app">Loading Blazor...</div>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
